--- a/manage/SingleMenu_manage.html
+++ b/manage/SingleMenu_manage.html
@@ -46,7 +46,6 @@
                 <span class="input-group-btn">
                     <button class="btn button-search mx-2" onclick="findTour()" type="button">Tìm kiếm</button>
                 </span>
-                <a href="./them-tour.html" class=" btn btn-primary mx-2">Thêm </a>
                 <!-- <a href="./sua-dia-danh.html" class=" btn btn-danger mx-2">Xoá </a> -->
             </div>
             <div class="alert alert-success" id="ThongBao"></div>
@@ -78,18 +77,10 @@
                         <td>Số nhà 58 Trần Duy Hưng,Thành Phố Hà Nội</td>
                         <td>10/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/phone/galaxyZ.png" alt="">
+                            <img src="/img/phone/galaxyZ.png" alt="">
                         </td>
                         <td>Giao hàng nhanh giúp mình ạ</td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">2</th>
@@ -100,18 +91,10 @@
                         <td>Xóm 7, Thôn Quảng Tái, Xã Trung Tú, Huyện Ứng Hòa,Thành Phố Hà Nội</td>
                         <td>8/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/phone/galaxyA.png" alt="">
+                            <img src="/img/phone/galaxyA.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">3</th>
@@ -122,18 +105,10 @@
                         <td>Số nhà 254 Minh Khai, Hai Bà Trưng, Thành Phố Hà Nội</td>
                         <td>01/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/watch/watch4.png" alt="">
+                            <img src="/img/watch/watch4.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">4</th>
@@ -144,18 +119,10 @@
                         <td>Số nhà 58 Chính Kinh,Thành Phố Hà Nội</td>
                         <td>10/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/watch/more_watch.png" alt="">
+                            <img src="/img/watch/more_watch.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">5</th>
@@ -166,18 +133,10 @@
                         <td>Ngõ 467 Đường Lĩnh Nam, Lĩnh Nam, Hoàng Mai, Hà Nội</td>
                         <td>25/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/head_phone/AKG.png" alt="">
+                            <img src="/img/head_phone/AKG.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">6</th>
@@ -188,18 +147,10 @@
                         <td>254 Ngọc Đại, xóm Tháp, Đại Mỗ, Hà Đông, Hà Nội</td>
                         <td>14/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/phone/galaxyS.png" alt="">
+                            <img src="/img/phone/galaxyS.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">7</th>
@@ -210,18 +161,10 @@
                         <td>69 Ngõ 35 Phố Nguyễn An Ninh, Tương Mai, Hoàng Mai, Hà Nội</td>
                         <td>10/6/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/tab/phu_kien_tab.png" alt="">
+                            <img src="/img/tab/phu_kien_tab.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">8</th>
@@ -232,18 +175,10 @@
                         <td>Số nhà 58 Trần Duy Hưng,Thành Phố Hà Nội</td>
                         <td>10/6/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/phone/galaxyZ.png" alt="">
+                            <img src="/img/phone/galaxyZ.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">9</th>
@@ -254,18 +189,10 @@
                         <td>69 Ngõ 35 Phố Nguyễn An Ninh, Tương Mai, Hoàng Mai, Hà Nội</td>
                         <td>10/6/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/phone/galaxyS.png" alt="">
+                            <img src="/img/phone/galaxyS.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">10</th>
@@ -276,18 +203,10 @@
                         <td>Số nhà 58 Trần Duy Hưng,Thành Phố Hà Nội</td>
                         <td>10/6/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/head_phone/AKG.png" alt="">
+                            <img src="/img/head_phone/AKG.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">11</th>
@@ -298,18 +217,10 @@
                         <td>5b Phố Cao Đạt, Lê Đại Hành, Đống Đa, Hà Nội</td>
                         <td>01/6/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/tab/phu_kien_tab.png" alt="">
+                            <img src="/img/tab/phu_kien_tab.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">12</th>
@@ -320,18 +231,10 @@
                         <td>5b Phố Cao Đạt, Lê Đại Hành, Đống Đa, Hà Nội</td>
                         <td>12/6/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/phone/galaxyS.png" alt="">
+                            <img src="/img/phone/galaxyS.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">13</th>
@@ -342,18 +245,10 @@
                         <td>72 Phố Trần Đại Nghĩa, Đồng Tâm, Hai Bà Trưng, Hà Nội</td>
                         <td>10/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/watch/watch4_clasic.png" alt="">
+                            <img src="/img/watch/watch4_clasic.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">14</th>
@@ -364,18 +259,10 @@
                         <td>02 Phố Trần Đại Nghĩa, Đồng Tâm, Hai Bà Trưng, Hà Nội</td>
                         <td>10/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/watch/watch4.png" alt="">
+                            <img src="/img/watch/watch4.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">15</th>
@@ -386,18 +273,10 @@
                         <td>86 Lê Trọng Tấn, Khương Mai, Thanh Xuân, Hà Nội</td>
                         <td>18/6/2022</td>
                         <td>
-                            <img src="/WebSamCenter/img/head_phone/buds.png" alt="">
+                            <img src="/img/head_phone/buds.png" alt="">
                         </td>
                         <td></td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa </a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                     <tr>
                         <th scope="row">16</th>
@@ -408,18 +287,10 @@
                         <td>Số nhà 158 Trần Duy Hưng,Cầu Giấy,Thành Phố Hà Nội</td>
                         <td>18/5/2002</td>
                         <td>
-                            <img src="/WebSamCenter/img/watch/fit.png" alt="">
+                            <img src="/img/watch/fit.png" alt="">
                         </td>
                         <td>Giao hàng đảm bảo chất lượng nhé</td>
-                        <td>
-                            <ul class="">
-                                <li>
-                                    <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                                        onclick="showModalDeleteLocation('002')">Xoá</div>
-                                </li>
-                                <li><a href="#">Sửa</a></li>
-                            </ul>
-                        </td>
+
                     </tr>
                 </tbody>
             </table>
