--- a/manage/category_manage.html
+++ b/manage/category_manage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản Lý sản phẩm</title>
+    <title>Quản Lý danh mục</title>
 
     <link rel="stylesheet" href="./css/style_manage.css">
     <script src="./js/js.js"></script>
@@ -74,7 +74,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -89,7 +89,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -104,7 +104,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -119,7 +119,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -134,7 +134,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -149,7 +149,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -164,7 +164,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -179,7 +179,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -194,7 +194,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -209,7 +209,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -224,7 +224,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -239,7 +239,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -254,7 +254,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -269,7 +269,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -284,7 +284,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -299,7 +299,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -314,7 +314,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
@@ -329,7 +329,7 @@
                                     <div data-toggle="modal" data-target="#confirmModal" class="delete"
                                         onclick="showModalDeleteLocation('002')">Xoá</div>
                                 </li>
-                                <li><a href="#">Sửa </a></li>
+                                <li><a href="./fix/category_fix.html">Sửa </a></li>
                             </ul>
                         </td>
 
