--- a/manage/account_manage.html
+++ b/manage/account_manage.html
@@ -46,7 +46,6 @@
         <span class="input-group-btn">
           <button class="btn button-search mx-2" onclick="findTour()" type="button">Tìm kiếm</button>
         </span>
-        <a href="./them-tour.html" class=" btn btn-primary mx-2">Thêm </a>
         <!-- <a href="./sua-dia-danh.html" class=" btn btn-danger mx-2">Xoá </a> -->
       </div>
       <div class="alert alert-success" id="ThongBao"></div>
@@ -76,10 +75,7 @@
             <td>nguyentientlu3624@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
+
                 <li><a href="#">Sửa </a></li>
               </ul>
             </td>
@@ -93,11 +89,8 @@
             <td>minhquang@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -110,11 +103,8 @@
             <td>nguyenThang2002@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html" Sửa></li>
               </ul>
             </td>
           </tr>
@@ -127,11 +117,8 @@
             <td>nguyenThang2002@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -144,11 +131,8 @@
             <td>nguyenCuc@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -161,11 +145,8 @@
             <td>HongNguyen2@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -178,11 +159,8 @@
             <td>Heocon99@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -195,11 +173,8 @@
             <td>ConcuNho02@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -212,11 +187,8 @@
             <td>nguyen02@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -229,11 +201,8 @@
             <td>nguyenCuc2002@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -246,11 +215,8 @@
             <td>VanAnh1999@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -263,11 +229,8 @@
             <td>HoangDuc@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -280,11 +243,8 @@
             <td>nguyenhoanganh@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -297,11 +257,8 @@
             <td>nguyenBi96@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -314,11 +271,8 @@
             <td>nguyenAnh@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -331,11 +285,8 @@
             <td>nguyenTin02@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
@@ -348,11 +299,8 @@
             <td>nguyenThang2002@gmail.com</td>
             <td>
               <ul class="" id="">
-                <li>
-                  <div data-toggle="modal" data-target="#confirmModal" class="delete"
-                    onclick="showModalDeleteLocation('002')">Xoá</div>
-                </li>
-                <li><a href="#">Sửa </a></li>
+
+                <li><a href="./fix/account_fix.html">Sửa </a></li>
               </ul>
             </td>
           </tr>
