--- a/manage/login/log_in.html
+++ b/manage/login/log_in.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
   <link rel="stylesheet" href="../login/log_in.css">
   <title>Đăng nhập</title>
 </head>
@@ -12,21 +13,19 @@
 <body>
   <div id="wrapper">
     <form action="" id="form-login">
-      <h1 class="form-heading">Form đăng nhập</h1>
+      <h1 class="form-heading">Đăng nhập</h1>
       <div class="form-group">
         <i class="far fa-user"></i>
-        <input type="text" class="form-input" placeholder="Tên đăng nhập">
+        <input type="text" class="form-input" placeholder="Tên đăng nhập" id="username">
       </div>
       <div class="form-group">
         <i class="fas fa-key"></i>
-        <input type="password" class="form-input" placeholder="Mật khẩu">
+        <input type="password" class="form-input" placeholder="Mật khẩu" id="password">
       </div>
-      <button class="form-submit btn">Đăng nhập</button>
+      <button class="form-submit btn" onclick="getInfo()">Đăng nhập</button>
     </form>
   </div>
-
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="../login/log_in.js"></script>
 
 </html>
