--- a/pages/Accessory/all.html
+++ b/pages/Accessory/all.html
@@ -807,7 +807,7 @@
 
             <div class="list_news lst_rp1">
                 <ul>
-                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="/pages/Thongtin/Gioithieu.html">Giới thiệu</a></li>
                     <li><a href="#">Khuyến mại</a></li>
                     <li><a href="../address.html">Hệ thống cửa hàng</a></li>
                     <li><a href="#">Hướng dẫn mua hàng</a></li>
