--- a/pages/address.html
+++ b/pages/address.html
@@ -592,9 +592,9 @@
 
       <div class="list_news lst_rp1">
         <ul>
-          <li><a href="#">Giới thiệu</a></li>
+          <li><a href="/pages/Thongtin/Gioithieu.html">Giới thiệu</a></li>
           <li><a href="#">Khuyến mại</a></li>
-          <li><a href="#">Hệ thống cửa hàng</a></li>
+          <li><a href="/pages/address.html">Hệ thống cửa hàng</a></li>
           <li><a href="#">Hướng dẫn mua hàng</a></li>
           <li><a href="#">Phương thức thanh toán</a></li>
         </ul>
