cn them sua xoa

--- a/manage/SingleMenu_manage.html
+++ b/manage/SingleMenu_manage.html
@@ -23,7 +23,7 @@
             <div class="list-page">
                 <p>Trang chủ</p>
                 <li class="active">
-                    <a href="./manage.html">Quản lý sản phẩm</a>
+                    <a href="./manage_sp.html">Quản lý sản phẩm</a>
                 </li>
                 <li>
                     <a href="./SingleMenu_manage.html">Quản lý đơn hàng</a>
@@ -41,8 +41,7 @@
         </div>
         <div class="content col-md-9">
             <div class="input-group">
-                <input type="text" id="tukhoa" class="form-control" onkeyup="findTour()" onchange="findTour()"
-                    placeholder="Nhập để tìm kiếm">
+                <input type="text" id="tukhoa" class="form-control" placeholder="Nhập để tìm kiếm">
                 <span class="input-group-btn">
                     <button class="btn button-search mx-2" onclick="findTour()" type="button">Tìm kiếm</button>
                 </span>
