--- a/manage/fix/account_fix.html
+++ b/manage/fix/account_fix.html
@@ -44,7 +44,7 @@
                 <input type="text" class="form-control" id="addr" placeholder="Nhập địa chỉ">
             </div>
             <button type="button" id="submit" class="btn btn-primary py-10px"> Sửa </button>
-            <button type="button" onclick="window.open('../SingleMenu_manage.html')" class="btn btn-danger">
+            <button type="button" onclick="window.open('../account_manage.html')" class="btn btn-danger">
                 Huỷ</button>
     </div>
 
