--- a/manage/fix/manage_fix.html
+++ b/manage/fix/manage_fix.html
@@ -33,11 +33,11 @@
                 <input type="text" class="form-control" id="price" placeholder="">
 
             </div>
-            <din class="btn">
+            <div class="btn">
                 <button type="button" id="submit" class="btn btn-primary py-10px px-10"> Sửa sản phẩm</button>
                 <button type="button" onclick="window.open('../SingleMenu_manage.html')"
                     class="btn btn-danger">Huỷ</button>
-            </din>
+            </div>
 
     </div>
 
