--- a/pages/Mobile/galaxyS.html
+++ b/pages/Mobile/galaxyS.html
@@ -674,7 +674,7 @@
                     <li><a href="/pages/Thongtin/Gioithieu.html">Giới thiệu</a></li>
                     <li><a href="#">Khuyến mại</a></li>
                     <li><a href="../address.html">Hệ thống cửa hàng</a></li>
-                    <li><a href="#">Hướng dẫn mua hàng</a></li>
+                    <li><a href="/pages/Thongtin/Muahang.html">Hướng dẫn mua hàng</a></li>
                     <li><a href="#">Phương thức thanh toán</a></li>
                 </ul>
             </div>
