--- a/pages/Mobile/galaxyZ.html
+++ b/pages/Mobile/galaxyZ.html
@@ -589,8 +589,8 @@
                 <ul>
                     <li><a href="/pages/Thongtin/Gioithieu.html">Giới thiệu</a></li>
                     <li><a href="#">Khuyến mại</a></li>
-                    <li><a href="#">Hệ thống cửa hàng</a></li>
-                    <li><a href="#">Hướng dẫn mua hàng</a></li>
+                    <li><a href="/pages/address.html">Hệ thống cửa hàng</a></li>
+                    <li><a href="/pages/Thongtin/Muahang.html">Hướng dẫn mua hàng</a></li>
                     <li><a href="#">Phương thức thanh toán</a></li>
                 </ul>
             </div>
