--- a/pages/Thongtin/Muahang.html
+++ b/pages/Thongtin/Muahang.html
@@ -533,12 +533,12 @@
                 <h2>Cách 2: Gọi điện đặt hàng</h2>
                 <li>Gọi điện thoại đến tổng đài từ 7h30-22h (cả CN & ngày lễ), chúng tôi luôn sẵn sàng phục vụ bạn.</li>
                 <h2>Cách 3: Đặt mua hàng trên website.</h2>
-                <p> <b>Bước 1 </b>: Vào <a href="/index.html">www.samcenter.vn</a> và tìm sản phẩm bạn cần mua bằng 2
+                <p> <b>Bước 1 </b>: Vào <a style="text-decoration: none; color: black;" href="/index.html">www.samcenter.vn</a> và tìm sản phẩm bạn cần mua bằng 2
                     cách.</p>
                 <p>- Click vào “Menu đầu trang” để tìm sản phẩm bạn đang cần xem.</p>
                 <p>- Tìm nhanh khi đã biết tên sản phẩm. Chỉ cần gõ “tên sản phẩm” vào box tìm kiếm, hệ thống sẽ gợi ý
                     bạn tên sản phẩm đúng nhất hiện có trong hệ thống.</p>
-                    <img src="../Thongtin/imgtt/Muahang/img-search.png" alt="">
+                    <img class="img-setting" src="../Thongtin/imgtt/Muahang/img-search.png" alt="">
                 <b>Bước 2: Tìm sản phẩm cần mua & đặt hàng</b>
                 <p>Sau khi xem thông tin chi tiết sản phẩm, bạn đã ưng ý sản phẩm bạn có thể mua sử dụng 1 trong 2 phương thức mua hàng:</p>
                 <b>1.Đặt mua online, giao hàng tận nơi</b>
@@ -546,19 +546,19 @@
                 <li>Click vào nút “Mua hàng”.</li>
                 <li>Bạn sẽ được đưa vào trang Mua hàng với đầy đủ giá bán, các phiên bản Màu, dung lượng,…. Chọn thông số máy (nếu có) rồi click vào Nút “Thêm vào Giỏ”</li>
                
-                <img src="../Thongtin/imgtt/Muahang/img-add.png" alt="">
+                <img class="img-setting" src="../Thongtin/imgtt/Muahang/img-add.png" alt="">
                 <li>Kiểm tra thông tin sản phẩm và tổng giá tiền trong Giỏ hàng. Bạn có thểm nhiều sản phẩm hoặc thêm số lượng vào giỏ hàng. Xong click vào Nút “Tiến hành thanh toán”</li>
-                <img src="../Thongtin/imgtt/Muahang/img-buy1.png" alt="">
+                <img class="img-setting" src="../Thongtin/imgtt/Muahang/img-buy1.png" alt="">
                 <li>Điền thông tin đầy đủ vào form, nhấn “Thanh toán và đặt hàng” để hoàn tất quá trình mua.</li>
-                <img src="../Thongtin/imgtt/Muahang/img-buy2.jpg" alt="">
+                <img class="img-setting" src="../Thongtin/imgtt/Muahang/img-buy2.jpg" alt="">
                 <li>Xác nhận lại đặt hàng thành công trên website.</li>
                 <li>Kiểm tra lại thông tin đơn hàng từ tư vấn viên</li>
-                <li>Họ và tên</li>
-                <li>Số điện thoại</li>
-                <li>Địa chỉ nhận hàng</li>
-                <li>Tên đầy đủ chỉ tiết sản phẩm kèm giá niêm yết (mức giảm giá nếu có)</li>
-                <li>Quà khuyến mại (nếu có)</li>
-                <li>Tổng giá trị đơn hàng, số tiền đã cọc, số tiền thanh toán còn lại</li>
+                <li>1.Họ và tên</li>
+                <li>2.Số điện thoại</li>
+                <li>3.Địa chỉ nhận hàng</li>
+                <li>4.Tên đầy đủ chỉ tiết sản phẩm kèm giá niêm yết (mức giảm giá nếu có)</li>
+                <li>5.Quà khuyến mại (nếu có)</li>
+                <li>6.Tổng giá trị đơn hàng, số tiền đã cọc, số tiền thanh toán còn lại</li>
                 <li>Kiểm tra khi nhận hàng</li>
                 <p>Khi nhận hàng, khách hàng chú ý kiểm tra và đối chiếu ảnh kiện hàng có băng dính SamCenter</p>
 
