--- a/pages/Headphone/AKG.html
+++ b/pages/Headphone/AKG.html
@@ -63,13 +63,13 @@
                                         Di động
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" href="./galaxyZ.html">Galaxy Z</a>
+                                        <li><a class="dropdown-item" href="../Mobile/galaxyZ.html">Galaxy Z</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="./galaxyS.html">Galaxy S</a>
+                                        <li><a class="dropdown-item" href="../Mobile/galaxyS.html">Galaxy S</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="./galaxyA.html">Galaxy A</a>
+                                        <li><a class="dropdown-item" href="../Mobile/galaxyA.html">Galaxy A</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="./phuKienMB.html">Phụ kiện</a></li>
+                                        <li><a class="dropdown-item" href="../Mobile/phuKienMB.html">Phụ kiện</a></li>
                                     </ul>
                                 </div>
                             </li>
