sửa lỗi liên kết trang Galaxy Z

--- a/pages/Thongtin/Gioithieu.html
+++ b/pages/Thongtin/Gioithieu.html
@@ -535,13 +535,13 @@
                 </div>
             </div>
            
-            <div class="paragraph">
+            <div class="paragraph" style="margin-top: -50%;">
                 <p>Song song với đó, chúng tôi mở rộng hệ thống cửa hàng uỷ quyền SamSung trên toàn quốc, nhằm đem tới trải
                     nghiệm sản phẩm và dịch vụ của tốt nhất tới mọi người dùng ở Việt Nam.</p>
                 <p>
                     SamCenter thuộc về công ty cổ phần Hesman Việt Nam, mở rộng ra nhiều tỉnh thành trên toàn quốc. Tới
                     tháng 5/2022, SamCenter đã mở thêm nhiều chi nhánh ở Hà Nội và Hồ Chí Minh nâng tổng số chi nhánh lên
-                    trên 10 cửa hàng <a href="/pages/address.html">Hệ thống cửa hàng</a>
+                    trên 10 cửa hàng <a href="../address.html">Hệ thống cửa hàng.</a>
                 </p>
                 <p>
                     Toàn bộ cửa hàng trong hệ thống SamCenter - đại lý uỷ quyền SamSung được thiết kế không gian trải nghiệm
@@ -597,7 +597,7 @@
 
     <div class="more_samcenter">
         <div class="mo_ta">
-            <img src="../../img/logo_footer.png" alt="" style="width: 126px; height: 75px; border-radius: 8px;">
+            <img src="../../img/logo_footer.png" alt="" style="width: 126px; height: 75px; border-radius: 8px;" href ="../../index.html">
             <p>SamCenter là chuỗi cửa hàng trải nghiệm sản phẩm ủy quyền cao cấp của Samsung. SamCenter được tạo ra với
                 mong
                 muốn mang lại những trải nghiệm tốt nhất về sản phẩm và dịch vụ của Samsung tới toàn bộ người dùng tại
