--- a/pages/Thongtin/Gioithieu.html
+++ b/pages/Thongtin/Gioithieu.html
@@ -513,7 +513,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="intro">
-                    <video src="../Thongtin/gioithieu.mp4"></video>
+                    <video autoplay>
+                        <source src="../Thongtin/gioithieu.mp4">
+                    </video>
                 </div>
             </div>
             <div class="col-md-6">
