--- a/pages/Smart-watch/more_watch.html
+++ b/pages/Smart-watch/more_watch.html
@@ -157,23 +157,23 @@
             <ul class="nav nav-pills">
                 <li class="nav-item">
                     <a class="nav-link adress" href="../address.html">
-                        <i class="ti-location-arrow"></i>
+                        <i class="fa-solid fa-location-arrow"></i>
                         địa chỉ
                     </a>
                 </li>
                 <li class="nav-item icon-sreach">
                     <a class="nav-link" href="#">
-                        <i class="ti-search"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        <i class="ti-shopping-cart"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </li>
                 <div class="phone-number">
                     <a class="nav-link" href="#">
-                        <i class="ti-mobile"></i>
+                        <i class="fa-solid fa-phone"></i>
                         1800 4886
                     </a>
                 </div>
